--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,31 +3,42 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:16
+      - image: circleci/node:latest
     steps:
       - checkout
       - run:
-          name: Install dependencies
+          name: Install Dependencies
           command: npm install
       - run:
-          name: Run tests
+          name: Test
           command: npm test
 
   deploy:
     docker:
-      - image: circleci/node:16
+      - image: circleci/node:latest
     steps:
       - checkout
       - run:
-          name: Deploy application
-          command: echo "Deploy process here"
+          name: Install SSH Key
+          command: |
+            mkdir -p ~/.ssh
+            echo "$EC2_SSH_KEY" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+      - run:
+          name: Deploy to EC2
+          command: |
+            ssh -o StrictHostKeyChecking=no ec2-user@18.140.51.185 << 'EOF'
+            cd /var/www/my-app
+            git pull origin main
+            npm install
+            pm2 restart all
+            EOF
 
 workflows:
   version: 2
-  build_and_deploy:
+  build-and-deploy:
     jobs:
       - build
       - deploy:
           requires:
             - build
-
